Fixed overflow hopefully

--- a/styles.scss
+++ b/styles.scss
@@ -264,6 +264,7 @@ footer {
 @media screen and (max-width: 1239px) {
   html {
     font-size: 80%;
+    overflow-x: hidden;
   }
   .intro {
     background-position: center;
